--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clear": "rm -rf dist",
     "prettier": "prettier --write",
     "lint": "eslint",
-    "build": "npm run clear && npm run microbundle:production && npm run microbundle:development",
+    "build": "npm run clear && npm run microbundle:production && npm run microbundle:development && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\",__DOCZ__=false",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist/production",
     "microbundle:development": "cross-env NODE_ENV=development npm run microbundle -- --output ./dist/development",
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@size-limit/file": "7.0.8",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "capitalize": "^2.0.0",
@@ -58,6 +59,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "release-it": "15.0.0",
+    "size-limit": "7.0.8",
     "webpack": "^4.41.2"
   },
   "keywords": [
@@ -68,6 +70,14 @@
     "yandex-maps"
   ],
   "sideEffects": false,
+  "homepage": "https://github.com/R1ZEN/react-yandex-maps",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/R1ZEN/react-yandex-maps.git"
+  },
+  "bugs": {
+    "url": "https://github.com/R1ZEN/react-yandex-maps/issues"
+  },
   "directories": {
     "doc": "docs"
   },
