--- a/package.json
+++ b/package.json
@@ -36,20 +36,20 @@
     "react-display-name": "^0.2.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-react": "7.12.13",
     "@size-limit/file": "7.0.8",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "25.0.0",
     "capitalize": "^2.0.0",
-    "cross-env": "^7.0.2",
+    "cross-env": "7.0.3",
     "docz": "^1.3.2",
     "docz-theme-default": "^1.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
     "husky": "^1.3.1",
-    "jest": "^24.9.0",
+    "jest": "25.0.0",
     "lint-staged": "^8.2.1",
     "lodash": "^4.17.15",
     "marksy": "^8.0.0",
@@ -58,6 +58,7 @@
     "prettier": "^1.19.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-test-renderer": "16.13.1",
     "release-it": "15.0.0",
     "size-limit": "7.0.8",
     "webpack": "^4.41.2"
@@ -97,17 +98,6 @@
       "npm run prettier",
       "git add"
     ]
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "collectCoverageFrom": [
-      "<rootDir>/src/**/*.js",
-      "!**/*.test.js"
-    ],
-    "transform": {
-      "^.+\\.js$": "./jest.transform.js"
-    }
   },
   "resolutions": {
     "docz/**/webpack": "4.28.4"
