--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "prettier": "prettier --write",
     "lint": "eslint",
     "build": "npm run clear && npm run microbundle:production && npm run microbundle:development && size-limit",
-    "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\",__DOCZ__=false",
+    "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist/production",
     "microbundle:development": "cross-env NODE_ENV=development npm run microbundle -- --output ./dist/development",
     "microbundle:watch": "cross-env NODE_ENV=development npm run microbundle -- --output ./dist/development --no-compress --watch",
-    "docs:dev": "docz dev",
-    "docs:build": "docz build",
-    "docs:deploy": "now",
     "release": "release-it",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "peerDependencies": {
     "react": "^0.14.9 || ^15.x || ^16.x || ^17.x || ^18.x"
@@ -36,11 +35,20 @@
     "react-display-name": "^0.2.5"
   },
   "devDependencies": {
+    "@babel/core": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.12.13",
     "@size-limit/file": "7.0.8",
+    "@storybook/addon-actions": "6.5.5",
+    "@storybook/addon-essentials": "6.5.5",
+    "@storybook/addon-interactions": "6.5.5",
+    "@storybook/addon-links": "6.5.5",
+    "@storybook/builder-webpack4": "6.5.5",
+    "@storybook/manager-webpack4": "6.5.5",
+    "@storybook/react": "6.5.5",
     "babel-eslint": "10.1.0",
     "babel-jest": "25.0.0",
+    "babel-loader": "8.2.5",
     "capitalize": "^2.0.0",
     "cross-env": "7.0.3",
     "docz": "^1.3.2",
@@ -48,20 +56,19 @@
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-storybook": "0.5.12",
     "husky": "^1.3.1",
     "jest": "25.0.0",
     "lint-staged": "^8.2.1",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.21",
     "marksy": "^8.0.0",
-    "microbundle": "^0.11.0",
-    "now": "^15.8.7",
-    "prettier": "^1.19.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "microbundle": "0.11.0",
+    "prettier": "2.6.2",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-test-renderer": "16.13.1",
     "release-it": "15.0.0",
-    "size-limit": "7.0.8",
-    "webpack": "^4.41.2"
+    "size-limit": "7.0.8"
   },
   "keywords": [
     "react",
