--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "clear": "rm -rf dist",
     "prettier": "prettier --write",
-    "lint": "eslint",
+    "lint": "eslint src",
     "build": "npm run clear && npm run microbundle:production && npm run microbundle:development && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist/production",
@@ -53,7 +53,7 @@
     "cross-env": "7.0.3",
     "docz": "^1.3.2",
     "docz-theme-default": "^1.2.0",
-    "eslint": "^5.16.0",
+    "eslint": "7.1.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-storybook": "0.5.12",
@@ -62,7 +62,7 @@
     "lint-staged": "^8.2.1",
     "lodash": "4.17.21",
     "marksy": "^8.0.0",
-    "microbundle": "0.11.0",
+    "microbundle": "0.12.4",
     "prettier": "2.6.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
