--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "clear": "rm -rf dist",
     "prettier": "prettier --write",
-    "lint": "eslint src",
+    "lint": "eslint",
     "build": "npm run clear && npm run microbundle:production && npm run microbundle:development && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist/production",
