--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prettier": "prettier --write",
     "lint": "eslint",
     "build": "npm run clear && npm run microbundle:production && npm run microbundle:development && size-limit",
-    "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
+    "microbundle": "microbundle --generateTypes false --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist/production",
     "microbundle:development": "cross-env NODE_ENV=development npm run microbundle -- --output ./dist/development",
     "microbundle:watch": "cross-env NODE_ENV=development npm run microbundle -- --output ./dist/development --no-compress --watch",
@@ -62,7 +62,7 @@
     "lint-staged": "^8.2.1",
     "lodash": "4.17.21",
     "marksy": "^8.0.0",
-    "microbundle": "0.12.4",
+    "microbundle": "0.15.0",
     "prettier": "2.6.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
