--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@storybook/builder-webpack4": "6.5.5",
     "@storybook/manager-webpack4": "6.5.5",
     "@storybook/react": "6.5.5",
-    "babel-eslint": "10.1.0",
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
     "babel-jest": "25.0.0",
     "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
