--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,7 +9,7 @@ env:
   NODE_VERSION: 14
 
 jobs:
-  checks:
+  build_test_lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +18,16 @@ jobs:
           node-version: ${{env.NODE_VERSION}}
 
       - name: Install node_modules
-        run: npm i
+        run: npm ci
+
+      - name: Typecheck
+        run: npm run tsc
+
+      - name: Lint
+        run: npm run lint -- src
+
+      - name: Test
+        run: npm run test
 
       - name: Build
         run: npm run build
@@ -26,9 +35,3 @@ jobs:
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test
