--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clear": "rm -rf dist",
     "prettier": "prettier --write",
     "lint": "eslint",
+    "tsc": "tsc --noEmit",
     "build": "npm run clear && npm run microbundle:production && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist",
