--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -6,7 +6,6 @@ on:
 name: npm
 
 env:
-  NODE_VERSION: 14
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
@@ -16,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{env.NODE_VERSION}}
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run build
