--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "release": "release-it",
     "test": "jest --ci --no-cache",
     "test:coverage": "jest --ci --no-cahce --coverage",
-    "sb:dev": "start-storybook -p 6006",
-    "sb:build": "build-storybook --docs"
+    "sb:dev": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
+    "sb:build": "NODE_OPTIONS=--openssl-legacy-provider build-storybook --docs"
   },
   "peerDependencies": {
     "react": "^16.x || ^17.x || ^18.x"
@@ -46,29 +46,31 @@
     "@babel/preset-typescript": "7.17.12",
     "@mdx-js/react": "1.6.22",
     "@size-limit/file": "7.0.8",
-    "@storybook/addon-essentials": "6.5.5",
-    "@storybook/addon-links": "6.5.5",
-    "@storybook/builder-webpack4": "6.5.5",
-    "@storybook/manager-webpack4": "6.5.5",
-    "@storybook/react": "6.5.5",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/builder-webpack4": "6.5.9",
+    "@storybook/manager-webpack4": "6.5.9",
+    "@storybook/react": "6.5.9",
     "@types/react": "16.14.26",
     "@typescript-eslint/eslint-plugin": "5.27.0",
     "@typescript-eslint/parser": "5.27.0",
+    "acorn": "8.7.1",
     "babel-jest": "25.0.0",
     "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
     "eslint": "7.1.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-storybook": "0.5.12",
+    "eslint-plugin-storybook": "0.5.13",
     "husky": "^1.3.1",
-    "jest": "25.0.0",
+    "jest": "28.1.1",
     "lint-staged": "^8.2.1",
     "microbundle": "0.15.0",
     "prettier": "2.6.2",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-test-renderer": "16.11.0",
+    "react": "17.0.2",
+    "react-display-name": "0.2.5",
+    "react-dom": "17.0.2",
+    "react-test-renderer": "17.0.2",
     "release-it": "14.14.3",
     "size-limit": "7.0.8",
     "typescript": "4.7.2"
