feat: partial russian support

--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
+    "translate:en": "docusaurus write-translations --override --locale en",
     "typecheck": "tsc"
   },
   "dependencies": {
