--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "clear": "rm -rf dist",
     "prettier": "prettier --write",
-    "lint": "eslint",
+    "lint": "eslint ./src",
     "tsc": "tsc --noEmit",
     "build": "npm run clear && npm run microbundle:production && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
