--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "scripts": {
     "clear": "rm -rf dist",
-    "prettier": "prettier --write",
-    "lint": "eslint ./src",
+    "prettier": "prettier --write .",
+    "lint": "eslint .",
     "tsc": "tsc --noEmit",
     "build": "npm run clear && npm run microbundle:production && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
