--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -6,7 +6,7 @@ on:
 name: npm
 
 env:
-  NODE_VERSION: 14
+  NODE_VERSION: 16.15.0
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: ${{env.NODE_VERSION}}
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
+      - run: npm ci --no-audit
       - run: npm run build
       - run: npm publish --access=public
