--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "translate:en": "docusaurus write-translations --override --locale en",
-    "typecheck": "tsc"
+    "typecheck": "tsc --noEmit "
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
@@ -32,7 +32,7 @@
     "@tsconfig/docusaurus": "1.0.5",
     "dotenv": "16.0.3",
     "prettier": "2.7.1",
-    "typescript": "4.7.4"
+    "typescript": "5.0.2"
   },
   "browserslist": {
     "production": [
@@ -47,6 +47,7 @@
     ]
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=16",
+    "npm": "8"
   }
 }
