--- a/package.json
+++ b/package.json
@@ -15,23 +15,21 @@
     "typings"
   ],
   "engines": {
-    "npm": ">=6",
-    "node": ">=14"
+    "node": ">=16",
+    "npm": "8"
   },
   "scripts": {
     "clear": "rm -rf dist",
     "prettier": "prettier --write .",
-    "lint": "eslint .",
-    "tsc": "tsc --noEmit",
+    "lint": "eslint src",
+    "typecheck": "tsc --noEmit",
     "build": "npm run clear && npm run microbundle:production && size-limit",
     "microbundle": "microbundle --jsx React.createElement --name ReactYandexMaps --external react --globals react=React --define process.env.NODE_ENV=\"${NODE_ENV}\"",
     "microbundle:production": "cross-env NODE_ENV=production npm run microbundle -- --output ./dist",
     "microbundle:develop": "npm run microbundle:production -- --no-compress --watch",
     "release": "release-it",
     "test": "jest --ci --no-cache",
-    "test:coverage": "jest --ci --no-cahce --coverage",
-    "sb:dev": "start-storybook -p 6006",
-    "sb:build": "build-storybook --docs"
+    "test:coverage": "jest --ci --no-cahce --coverage"
   },
   "peerDependencies": {
     "react": "^16.x || ^17.x || ^18.x"
@@ -44,13 +42,7 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.17.12",
-    "@mdx-js/react": "1.6.22",
     "@size-limit/file": "7.0.8",
-    "@storybook/addon-essentials": "6.5.5",
-    "@storybook/addon-links": "6.5.5",
-    "@storybook/builder-webpack4": "6.5.5",
-    "@storybook/manager-webpack4": "6.5.5",
-    "@storybook/react": "6.5.5",
     "@types/react": "16.14.26",
     "@typescript-eslint/eslint-plugin": "5.27.0",
     "@typescript-eslint/parser": "5.27.0",
@@ -58,20 +50,19 @@
     "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
     "eslint": "7.1.0",
-    "eslint-plugin-jest": "^22.21.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-storybook": "0.5.12",
-    "husky": "^1.3.1",
+    "eslint-plugin-jest": "22.21.0",
+    "eslint-plugin-react": "7.32.2",
+    "husky": "1.3.1",
     "jest": "25.0.0",
-    "lint-staged": "^8.2.1",
-    "microbundle": "0.15.0",
-    "prettier": "2.6.2",
+    "lint-staged": "8.2.1",
+    "microbundle": "0.15.1",
+    "prettier": "2.8.7",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-test-renderer": "16.11.0",
     "release-it": "14.14.3",
-    "size-limit": "7.0.8",
-    "typescript": "4.7.2"
+    "size-limit": "8.2.4",
+    "typescript": "5.0.2"
   },
   "keywords": [
     "react",
