feat: remove fixed npm engine

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "typings"
   ],
   "engines": {
-    "node": ">=16",
-    "npm": "8"
+    "node": ">=16"
   },
   "scripts": {
     "clear": "rm -rf dist",
